<resources>
    <string name="app_name">Architecture</string>
    <string name="title_activity_network_test">NetworkTestActivity</string>
    <string name="title_activity_database_test">DatabaseTestActivity</string>
    <string name="title_activity_component_demo">ComponentDemoActivity</string>
    <string name="data_from_data_source">自定义DataSource</string>
    <string name="data_from_room">DataSource来源于Room</string>
    <string name="data_from_network">DataSource来源于网络</string>
    <string name="data_from_network_and_room">DataSource来源于网络和Room数据库</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page1">page1</string>
    <string name="page2">page2</string>
    <string name="page3">page3</string>
    <string name="goto_page1">跳转Page1</string>
    <string name="goto_page2">跳转Page2</string>
    <string name="goto_page3">跳转Page3</string>
</resources>
