<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.NavigationDemoActivity">

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tab_list"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_fragment_demo" />

    <RadioGroup
        android:background="@color/title_bar_bg_day"
        android:id="@+id/tab_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/nav_host_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <RadioButton
            android:id="@+id/page1_rb"
            style="@style/home_bottom_tab_style"
            android:drawableTop="@drawable/ic_tab_home"
            android:text="@string/goto_page1" />

        <RadioButton
            android:id="@+id/page2_rb"
            style="@style/home_bottom_tab_style"
            android:drawableTop="@drawable/ic_tab_home"
            android:text="@string/goto_page2" />

        <RadioButton
            android:id="@+id/page3_rb"
            style="@style/home_bottom_tab_style"
            android:drawableTop="@drawable/ic_tab_discovery"
            android:text="@string/goto_page3" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>